# flowix

./: .gitignore  2026-06-18-笔记总结.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/: Cargo.toml
app/backend/: Cargo.toml  Info.plist  tauri.conf.json
app/backend/icons/: icon.icns
app/backend/icons/android/values/: ic_launcher_background.xml
app/backend/src/: agent.rs  agent_access.rs  commands.rs  db.rs  fs_watcher.rs  global_meta_data.rs  lib.rs  main.rs  memo_events.rs  memo_file.rs  path_scope.rs  search.rs  threads.rs  user_config.rs
app/backend/src/commands/: agent.rs  agent_access.rs  dialog.rs  helpers.rs  memo.rs  mod.rs  notebook.rs  settings.rs  thread.rs  window.rs
app/backend/src/memo_file/: content.rs  derivation.rs  frontmatter.rs  list_store.rs  mod.rs  notebook.rs  registration.rs  time.rs  types.rs
app/backend/src/open_target/: mod.rs  parser.rs  resolver.rs
app/backend/src/prompt/: base.rs  behavior.rs  custom.rs  mod.rs  tools.rs
app/backend/src/providers/: mod.rs  openai.rs  openai_compatible.rs  test_streaming.rs
app/backend/src/providers/tools/: filesystem.rs  mod.rs  notebook.rs
app/flowix-cli/: Cargo.toml
doc/: pending-issues.md  theme-refactor.md
docs/: architecture-issues-full-review-2026-06-09.md  architecture-stability-review.md  document-session-architecture.md  frontend-backend-architecture-issues-2026-06-09.md  pending-issues-save-sync.md  theme-refactor.md
homepage/: README.md  index.html
public/: theme-boot.js
scripts/: build-cli.sh  gen-icon.mjs
(+485 files in other folders)
