[package]
name = "woopmemo"
version = "0.1.0"
description = "WoopMemo - AI Note Taking App"
authors = ["you"]
edition = "2021"

[lib]
name = "woopmemo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde_yaml = "0.9"
chrono = "0.4"
dirs = "5.0"
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
rllm = { version = "1.1", features = ["openai", "anthropic", "deepseek"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
base64 = "0.22"
nanoid = "0.4"
